k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wrappedup-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: wrappedup-prod
