k8s/base/sonarqube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: wrappedup-infra
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: sonarqube
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-db
  namespace: wrappedup-infra
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: sonarqube-db
